--- a/GloryMenga/Opvoedings.html
+++ b/GloryMenga/Opvoedings.html
@@ -60,22 +60,24 @@
         </div>
     </div>
     <!--Nav-->
-    <div class="container">  
-        <div class="Opvoeding">
-            <div class="OP">
-                <div class="titel"><h1>Opvoedingsproject</h1></div>
-                <p>Het opvoedingsproject van de Vlaamse jezuïetencolleges is gebaseerd op 10 bewegingen die engagement en dynamiek 
-                    uitdrukken en een leidraad vormen voor pedagogisch handelen. Deze bewegingen zijn geworteld in het christelijk 
-                    humanisme en in het charisma van Ignatius van Loyola. Het project moedigt iedereen aan om op een eigen manier en 
-                    vanuit een persoonlijke betrokkenheid een bijdrage te leveren. De bewegingen zijn genoemd met werkwoorden en uitdrukkingen 
-                    uit de Ignatiaanse traditie.</p>
-            </div>
-            <div class="vl">
+    <div class="container"> 
+        <div class="first">
+            <div class="Opvoeding">
+                <div class="OP">
+                    <div class="titel"><h1>Opvoedingsproject</h1></div>
+                    <p>Het opvoedingsproject van de Vlaamse jezuïetencolleges is gebaseerd op 10 bewegingen die engagement en dynamiek 
+                        uitdrukken en een leidraad vormen voor pedagogisch handelen. Deze bewegingen zijn geworteld in het christelijk 
+                        humanisme en in het charisma van Ignatius van Loyola. Het project moedigt iedereen aan om op een eigen manier en 
+                        vanuit een persoonlijke betrokkenheid een bijdrage te leveren. De bewegingen zijn genoemd met werkwoorden en uitdrukkingen 
+                        uit de Ignatiaanse traditie.</p>
+                </div>
+                <div class="vl">
 
-            </div>
-            <div class="fotoOP">
-                <img src="/images/Ignatius.jpg" alt="Ignatius">
-            </div>
+                </div>
+                <div class="fotoOP">
+                    <img src="/images/Ignatius.jpg" alt="Ignatius">
+                </div>
+            </div> 
         </div>
         <div class="bewegingen">
             Ignatiaanse pedagogie in 10 bewegingen
