--- a/NelleFavoreel/jaarthema.html
+++ b/NelleFavoreel/jaarthema.html
@@ -20,7 +20,7 @@
 					</div>
 				</div>
 
-				<div class="rechts">
+				<div class="right">
 					<div class="menu">
 						<ul>
 							<li><a href="/GloryMenga/home.html">Home</a></li>
@@ -38,13 +38,13 @@
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
-									<li><a href="inschrijvingen.html">Inschrijvingen</a></li>
-									<li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
-									<li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
-									<li><a href="#">Privacybeleid</a></li>
+									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+									<li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+									<li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+									<li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
 									<li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-									<li><a href="#">Leefregels</a></li>
-									<li><a href="#">Vacatures</a></li>
+									<li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+									<li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
 								</ul>
 							</li>
 							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
