--- a/NassimEjja/History.html
+++ b/NassimEjja/History.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="Style.css" />
 		<title>Historiek</title>
 	</head>
 	<body>
@@ -372,9 +372,10 @@
 			</div>
 		</div>
 
+		<!--Footer-->
 		<footer>
 			<div class="foot">
-				<div class="kader">
+				<div class="frame">
 					<h1>Sint-Jan Berchmanscollege</h1>
 					<div class="icons">
 						<div class="icon">
@@ -386,7 +387,7 @@
 						<div class="icon">
 							<img src="/images/location.png" alt="call" />
 						</div>
-						<p>Rue des Ursulines 4 1000 Bruxelles</p>
+						<p>Ursulinenstraat 4 1000 Bruxelles</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
@@ -395,26 +396,36 @@
 						<p>secretariaat@sint-jan-brussel.be</p>
 					</div>
 				</div>
-				<div class="wit"></div>
+				<div class="white"></div>
 			</div>
-			<div class="blauw">
+			<div class="blue">
 				<div class="txtB">
-					<div class="txtBlauw">
+					<div class="txtBlue">
 						<h1>Belangrijke info</h1>
-						<a href="#"><p>Eerste schooldag</p></a>
-						<a href="#"><p>Kalender</p></a>
-						<a href="#"><p>Leertraject</p></a>
+						<a href="/Privacyverklaring.pdf" target="_blank"
+							><p>Privacybeleid</p></a
+						>
+						<a href="/schoolreglement2022-2023_def.pdf" target="_blank"
+							><p>Schoolregelment</p></a
+						>
+						<a
+							href="/Schoolkosten detailprijs 2022-2023 SEC.pdf"
+							target="_blank"
+							><p>Schoolkosten</p></a
+						>
 					</div>
-					<div class="txtBlauw">
-						<h1>Veelgestelde vragen</h1>
-					</div>
-					<div class="txtBlauw">
-						<h1>Werken bij ons</h1>
-						<a href="#"><p>Word leerkracht</p></a>
-						<a href="#"><p>Alle Vacatures</p></a>
+					<div class="txtBlue">
+						<h1>Onze school</h1>
+						<a href="/BerkayUnutkan/inschrijvingen.html"
+							><p>inschrijvingen</p></a
+						>
+						<a href="/BerkayUnutkan/vacaturesberkay.html"
+							><p>Alle Vacatures</p></a
+						>
 					</div>
 				</div>
 			</div>
 		</footer>
+		<!--Footer-->
 	</body>
 </html>
