--- a/BerkayUnutkan/inschrijvingen.html
+++ b/BerkayUnutkan/inschrijvingen.html
@@ -1,66 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inschrijvingen | Sint-Jan Berchmanscollege</title>
-    <link rel="stylesheet" href="style_berkay.css">
-    <link rel="shortcut icon" href="/images/logo_navy_blue.png">
-    <link rel="stylesheet" href="/NelleFavoreel/menu.css">
-    <script src="/Search.js"></script>
-</head>
-<body>
-    <!--Nav-->
+    <head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Inschrijvingen | Sint-Jan Berchmanscollege</title>
+		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
+		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
+		<link rel="stylesheet" href="style_berkay.css" />
+	</head>
+	<body>
+		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="/GloryMenga/home.html"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
 				</div>
-
-				<div class="right">
-					<div class="menu">
-						<ul>
-							<li><a href="/GloryMenga/home.html">Home</a></li>
-							<li>
-								<a href="/GloryMenga/home.html">Over ons</a>
-								<ul class="dropdown">
-									<li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-									<li><a href="/NassimEjja/History.html">Historiek</a></li>
-									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
-									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="#">Organisatie</a>
-								<ul class="dropdown">
-									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-									<li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
-									<li><a href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
-									<li><a href="/Privacyverklaring.pdf">Privacybeleid</a></li>
-									<li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-									<li><a href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
-									<li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
-								</ul>
-							</li>
-							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
-							<div class="svg">
-								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
-							</div>
-						</ul>
-					</div>
+				<div class="right"> 
+                    <div class="menu">
+                       <ul>
+                           <li><a href="/GloryMenga/home.html">Home</a></li>
+                           <li><a href="/GloryMenga/home.html">Over ons</a>
+                               <ul class="dropdown">
+                                   <li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+                                   <li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+                                   <li><a href="/NassimEjja/History.html">Historiek</a></li>
+                                   <li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+                                   <li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+                                   <li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="#">Organisatie</a>
+                               <ul class="dropdown">
+                                   <li><a href="inschrijvingen.html">Inschrijvingen</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Schoolkosten</a></li>
+                                   <li><a href="/NordineElOuafrasi/index.html">Studierichtingen</a></li>
+                                   <li><a href="#">Privacybeleid</a></li>
+                                   <li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+                                   <li><a href="#">Leefregels</a></li>
+                                   <li><a href="#">Vacatures</a></li>
+                               </ul>
+                           </li>
+                           <li><a href="/NelleFavoreel/contact.html">Contact</a></li>
+                           <div class="svg">
+                               <a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool"></a>
+                           </div>
+                       </ul>
+                   </div>
 					<div class="box">
 						<form>
-							<input type="text" id="searchInput" placeholder="Typ hier..." />
+							<input type="text" id="searchInput" placeholder="Typ hier..."/>
 							<button type="submit" onclick="search()">Zoeken</button>
 						</form>
 					</div>
 				</div>
+				<!--hamburger menu-->
+				
+				<!--hamburger menu-->
 			</div>
 		</div>
 		<!--Nav-->
@@ -123,7 +122,6 @@
 			</nav>
 		</div>
 		<!--Hamburger-->
-
 <!--firstmain-->
 <div class="first-main">
     <h1 class="title">Inschrijvingen</h1>
