--- a/NelleFavoreel/schoolvisie.html
+++ b/NelleFavoreel/schoolvisie.html
@@ -5,16 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Schoolvisie</title>
-		<link rel="shortcut icon" href="images/logo_navy_blue.png" />
-		<link rel="stylesheet" href="NelleFavoreel/style_Nelle5.css" />
-		<link rel="stylesheet" href="NelleFavoreel/menu.css" />
+		<link rel="shortcut icon" href="/images/logo_navy_blue.png" />
+		<link rel="stylesheet" href="/NelleFavoreel/style_Nelle5.css" />
+		<link rel="stylesheet" href="/NelleFavoreel/menu.css" />
 	</head>
 	<body>
 		<!--Nav-->
 		<div class="top">
 			<div class="nav">
 				<div class="image">
-					<a href="#"><img src="images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+					<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 					<div class="txtI">
 						<p>Sint-Jan Berchmanscollege</p>
 					</div>
@@ -22,33 +22,33 @@
 				<div class="right">
 					<div class="menu">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="/index.html">Home</a></li>
 							<li>
 								<a href="#">Over ons</a>
 								<ul class="dropdown">
-									<li><a href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-									<li><a href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-									<li><a href="NassimEjja/History.html">Historiek</a></li>
-									<li><a href="NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-									<li><a href="NelleFavoreel/motto.html">Motto</a></li>
-									<li><a href="NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+									<li><a href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+									<li><a href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+									<li><a href="/NassimEjja/History.html">Historiek</a></li>
+									<li><a href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+									<li><a href="/NelleFavoreel/motto.html">Motto</a></li>
+									<li><a href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
 								</ul>
 							</li>
 							<li>
 								<a href="#">Organisatie</a>
 								<ul class="dropdown">
-									<li><a href="BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-									<li><a href="Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank">Schoolkosten</a></li>
-									<li><a href="NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
-									<li><a href="Privacyverklaring.pdf" target="_blank">Privacybeleid</a></li>
-									<li><a href="BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-									<li><a href="schoolreglement2022-2023_def.pdf" target="_blank">Schoolreglement</a></li>
-									<li><a href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
+									<li><a href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+									<li><a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank">Schoolkosten</a></li>
+									<li><a href="/NordineElOuafrasi/Studierichtingen/studieaanbod.html">Studierichtingen</a></li>
+									<li><a href="/Privacyverklaring.pdf" target="_blank">Privacybeleid</a></li>
+									<li><a href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+									<li><a href="/schoolreglement2022-2023_def.pdf" target="_blank">Schoolreglement</a></li>
+									<li><a href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
 								</ul>
 							</li>
-							<li><a href="NelleFavoreel/contact.html">Contact</a></li>
+							<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
 							<div class="svg">
-								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
+								<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
 							</div>
 						</ul>
 					</div>
@@ -65,7 +65,7 @@
 		<!--Hamburger-->
 		<div class="navErik">
 			<div class="image">
-				<a href="#"><img src="images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
+				<a href="#"><img src="/images/logo_navy_blue.png" alt="logo_navy_blue" /></a>
 				<div class="txtI">
 					<p>Sint-Jan Berchmanscollege</p>
 				</div>
@@ -96,25 +96,25 @@
 	  but hey, it's pure CSS magic.
 	  -->
 					<ul id="menu" style="display: none">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a>Over ons</a></li>
-						<li><a class="smally" href="GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
-						<li><a class="smally" href="NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
-						<li><a class="smally" href="NassimEjja/History.html">Historiek</a></li>
-						<li><a class="smally" href="NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
-						<li><a class="smally" href="NelleFavoreel/motto.html">Motto</a></li>
-						<li><a class="smally" href="NelleFavoreel/jaarthema.html">Jaarthema</a></li>
+						<li><a class="smally" href="/GloryMenga/Opvoedings.html">Opvoedingsproject</a></li>
+						<li><a class="smally" href="/NelleFavoreel/schoolvisie.html">Schoolvisie</a></li>
+						<li><a class="smally" href="/NassimEjja/History.html">Historiek</a></li>
+						<li><a class="smally" href="/NelleFavoreel/janBerchmans.html">Jan Berchmans</a></li>
+						<li><a class="smally" href="/NelleFavoreel/motto.html">Motto</a></li>
+						<li><a class="smally" href="/NelleFavoreel/jaarthema.html">Jaarthema</a></li>
 						<li><a>Organisatie</a></li>
-						<li><a class="smally" href="BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
-						<li><a class="smally" href="Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
-						<li><a class="smally" href="NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
-						<li><a class="smally" href="Privacyverklaring.pdf">Privacybeleid</a></li>
-						<li><a class="smally" href="BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
-						<li><a class="smally" href="schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
-						<li><a class="smally" href="BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
-						<li><a href="NelleFavoreel/contact.html">Contact</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/inschrijvingen.html">Inschrijvingen</a></li>
+						<li><a class="smally" href="/Schoolkosten detailprijs 2022-2023 SEC.pdf">Schoolkosten</a></li>
+						<li><a class="smally" href="/NordineElOuafrasi/Studierichtingen/studierichtingen.html">Studierichtingen</a></li>
+						<li><a class="smally" href="/Privacyverklaring.pdf">Privacybeleid</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/wieiswie.html">Wie is wie?</a></li>
+						<li><a class="smally" href="/schoolreglement2022-2023_def.pdf">Schoolreglement</a></li>
+						<li><a class="smally" href="/BerkayUnutkan/vacaturesberkay.html">Vacatures</a></li>
+						<li><a href="/NelleFavoreel/contact.html">Contact</a></li>
 						<div class="svg">
-							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="images/smartschool_app_icon.svg" alt="smartschool" /></a>
+							<a href="https://sint-jan-brussel.smartschool.be/login"><img src="/images/smartschool_app_icon.svg" alt="smartschool" /></a>
 						</div>
 					</ul>
 				</div>
@@ -135,7 +135,7 @@
 				</p>
 			</div>
 			<div class="schoolvisieFoto">
-				<img src="images/speelplaats.jpeg" />
+				<img src="/images/speelplaats.jpeg" />
 			</div>
 			<div class="bekwaam">
 				<h1>Bekwaam</h1>
@@ -153,7 +153,7 @@
 				</p>
 			</div>
 			<div class="bekwaamFoto">
-				<img src="images/honderddagen5-2018.jpeg" />
+				<img src="/images/honderddagen5-2018.jpeg" />
 			</div>
 			<div class="bewust">
 				<h1>Bewust</h1>
@@ -174,7 +174,7 @@
 				</p>
 			</div>
 			<div class="bewustFoto">
-				<img src="images/honderddagen7-2018.jpeg" />
+				<img src="/images/honderddagen7-2018.jpeg" />
 			</div>
 			<div class="bewogen">
 				<h1>Bewogen</h1>
@@ -192,7 +192,7 @@
 				</p>
 			</div>
 			<div class="bewogenFoto">
-				<img src="images/overzicht.JPG" />
+				<img src="/images/overzicht.JPG" />
 			</div>
 			<div class="totSlot">
 				<h1>Tot Slot</h1>
@@ -210,19 +210,19 @@
 					<h1>Sint-Jan Berchmanscollege</h1>
 					<div class="icons">
 						<div class="icon">
-							<img src="images/call.png" alt="call" />
+							<img src="/images/call.png" alt="call" />
 						</div>
 						<p>02/5120370</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
-							<img src="images/location.png" alt="call" />
+							<img src="/images/location.png" alt="call" />
 						</div>
 						<p>Ursulinenstraat 4 1000 Bruxelles</p>
 					</div>
 					<div class="icons">
 						<div class="icon">
-							<img src="images/mail.png" alt="call" />
+							<img src="/images/mail.png" alt="call" />
 						</div>
 						<p>secretariaat@sint-jan-brussel.be</p>
 					</div>
@@ -233,14 +233,14 @@
 				<div class="txtB">
 					<div class="txtBlue">
 						<h1>Belangrijke info</h1>
-						<a href="Privacyverklaring.pdf" target="_blank"><p>Privacybeleid</p></a>
-						<a href="schoolreglement2022-2023_def.pdf" target="_blank"><p>Schoolregelment</p></a>
-						<a href="Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank"><p>Schoolkosten</p></a>
+						<a href="/Privacyverklaring.pdf" target="_blank"><p>Privacybeleid</p></a>
+						<a href="/schoolreglement2022-2023_def.pdf" target="_blank"><p>Schoolregelment</p></a>
+						<a href="/Schoolkosten detailprijs 2022-2023 SEC.pdf" target="_blank"><p>Schoolkosten</p></a>
 					</div>
 					<div class="txtBlue">
 						<h1>Onze school</h1>
-						<a href="BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
-						<a href="BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
+						<a href="/BerkayUnutkan/inschrijvingen.html"><p>inschrijvingen</p></a>
+						<a href="/BerkayUnutkan/vacaturesberkay.html"><p>Alle Vacatures</p></a>
 					</div>
 				</div>
 			</div>
